[package]
name = "playround_bot"
version = "0.1.0"
authors = ["Vladimir Yavdoshenko <v.yavdoshenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = "0.7"
tokio = { version = "0.2", features = ["full"]}
futures = "0.3"